--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.4",
     "antd": "^5.24.8",
     "axios": "^1.9.0",
+    "js-cookie": "^3.0.5",
     "mqtt": "^5.13.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/mqtt": "^2.5.0",
     "@types/node": "^22.15.17",
     "@types/react": "^19.0.10",
