--- a/package.json
+++ b/package.json
@@ -4,12 +4,31 @@
   "version": "0.0.0",
   "type": "module",
   "main": "dist-electron/main.cjs",
+  "build": {
+    "appId": "com.stocku.id",
+    "productName": "Stocku",
+    "files": [
+      "dist/**",
+      "dist-electron/**",
+      "node_modules/**",
+      "package.json"
+    ],
+    "directories": {
+      "buildResources": "build"
+    },
+    "win": {
+      "target": "nsis",
+      "icon": "build/icon.ico"
+    }
+  },
   "scripts": {
+    "vite": "vite",
     "dev": "concurrently \"vite\" \"npm:electron:dev\"",
     "electron:dev": "wait-on http://localhost:5173 && electron .",
     "build": "tsc -b && vite build && tsc -p tsconfig.electron.json",
-  "build-electron": "tsc -p tsconfig.electron.json",
-    "start": "electron ."
+    "build-electron": "tsc -p tsconfig.electron.json",
+    "start": "electron .",
+    "dist": "electron-builder"
   },
   "dependencies": {
     "@stomp/stompjs": "^7.1.1",
@@ -37,6 +56,7 @@
     "@vitejs/plugin-react": "^4.3.4",
     "concurrently": "^9.1.2",
     "electron": "^36.2.1",
+    "electron-builder": "^26.0.12",
     "eslint": "^9.22.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
